# bitcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libutabitconsensus.pc.in
.tx/: config
contrib/: README.md  gitian-build.sh  qt_translations.py  tidy_datadir.sh  utabit-cli.bash-completion  utabit-qt.pro  utabit-tx.bash-completion  utabitd.bash-completion
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  amount.h~  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.cpp~  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  chainparamsseeds.h~  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  (+106 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_utabit.cpp  ccoins_caching.cpp  coin_selection.cpp  crypto_hash.cpp  rollingbloom.cpp  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  (+68 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: utabit_af.ts  utabit_af_ZA.ts  utabit_ar.ts  utabit_be_BY.ts  utabit_bg.ts  utabit_bg_BG.ts  utabit_bs.ts  utabit_ca.ts  utabit_ca@valencia.ts  utabit_ca_ES.ts  utabit_cs.ts  utabit_cs_CZ.ts  utabit_cy.ts  utabit_da.ts  utabit_de.ts  utabit_el.ts  utabit_el_GR.ts  utabit_en.ts  utabit_en_GB.ts  utabit_eo.ts  utabit_es.ts  utabit_es_AR.ts  utabit_es_CL.ts  utabit_es_CO.ts  utabit_es_DO.ts  utabit_es_ES.ts  utabit_es_MX.ts  utabit_es_UY.ts  utabit_es_VE.ts  utabit_et.ts  utabit_et_EE.ts  utabit_eu_ES.ts  utabit_fa.ts  utabit_fa_IR.ts  utabit_fi.ts  utabit_fr.ts  utabit_fr_CA.ts  utabit_fr_FR.ts  utabit_gl.ts  utabit_he.ts  (+49 more)
src/qt/res/: utabit-qt-res.rc
src/qt/res/icons/: utabit.icns
src/qt/res/movies/: makespinner.sh
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  utabitconsensus.cpp  utabitconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_utabit_NativeSecp256k1.c  org_utabit_NativeSecp256k1.h  org_utabit_Secp256k1Context.c  org_utabit_Secp256k1Context.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+29 more)
src/test/data/: README.md  utabit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+295 files in other folders)
